Mensaje del commit

--- a/AnalisisExploratorio.ipynb
+++ b/AnalisisExploratorio.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,6 +35,7 @@
     }
    ],
    "source": [
+    "print(\"Hello World\")\n",
     "print(\"Hello World\")"
    ]
   }
