--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -27,20 +27,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "PREPROCESAMIENTO DE DATOS\n",
-    "\n",
-    "Para los campos de la tabla de transacciones\n",
-    "Se tienen los siguientes campos categoricos\n",
-    "\n",
-    "'ProductCD', 'card4', 'card6', 'P_emaildomain', 'R_emaildomain', 'M1',\n",
-    "'M2', 'M3', 'M4', 'M5', 'M6', 'M7', 'M8', 'M9'\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -54,17 +40,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lectura de archivos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Lectura de los datos del archivo csv\n",
-    "data = pd.read_csv('Data/credit_dataset_2_transaccion.csv');\n",
+    "data = pd.read_csv('Data/credit_dataset_2_transaccion.csv')\n",
     "\n",
     "\n",
     "#Lectura de los datos del archivo csv\n",
-    "ident = pd.read_csv('Data/credit_dataset_2_identity.csv');"
+    "ident = pd.read_csv('Data/credit_dataset_2_identity.csv')"
    ]
   },
   {
@@ -277,6 +270,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verificacion de columnas categoricas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
@@ -315,6 +315,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aplicacion de ONE-HOT ENCODING a las variables categoricas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
@@ -336,6 +343,13 @@
     "    \n",
     "    # Eliminar la columna original\n",
     "    data.drop(col, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agrupacion de campos y luego codificacion con ONE-HOT ENCODING"
    ]
   },
   {
@@ -578,6 +592,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Codificacion de categorias binarias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
@@ -594,25 +615,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eliminacion de valores con mas del 80% de valores nulos\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = 0.8  # Umbral de 90% de valores faltantes\n",
+    "data = data.dropna(thresh=int(threshold * len(data)), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "M5\n",
-       "0.0    482973\n",
-       "1.0    107567\n",
-       "Name: count, dtype: int64"
+       "['TransactionID',\n",
+       " 'isFraud',\n",
+       " 'TransactionDT',\n",
+       " 'TransactionAmt',\n",
+       " 'card1',\n",
+       " 'card2',\n",
+       " 'card3',\n",
+       " 'card5',\n",
+       " 'addr1',\n",
+       " 'addr2',\n",
+       " 'C1',\n",
+       " 'C2',\n",
+       " 'C3',\n",
+       " 'C4',\n",
+       " 'C5',\n",
+       " 'C6',\n",
+       " 'C7',\n",
+       " 'C8',\n",
+       " 'C9',\n",
+       " 'C10',\n",
+       " 'C11',\n",
+       " 'C12',\n",
+       " 'C13',\n",
+       " 'C14',\n",
+       " 'D1',\n",
+       " 'D10',\n",
+       " 'D15',\n",
+       " 'M1',\n",
+       " 'M2',\n",
+       " 'M3',\n",
+       " 'M5',\n",
+       " 'M6',\n",
+       " 'M7',\n",
+       " 'M8',\n",
+       " 'M9',\n",
+       " 'V12',\n",
+       " 'V13',\n",
+       " 'V14',\n",
+       " 'V15',\n",
+       " 'V16',\n",
+       " 'V17',\n",
+       " 'V18',\n",
+       " 'V19',\n",
+       " 'V20',\n",
+       " 'V21',\n",
+       " 'V22',\n",
+       " 'V23',\n",
+       " 'V24',\n",
+       " 'V25',\n",
+       " 'V26',\n",
+       " 'V27',\n",
+       " 'V28',\n",
+       " 'V29',\n",
+       " 'V30',\n",
+       " 'V31',\n",
+       " 'V32',\n",
+       " 'V33',\n",
+       " 'V34',\n",
+       " 'V53',\n",
+       " 'V54',\n",
+       " 'V55',\n",
+       " 'V56',\n",
+       " 'V57',\n",
+       " 'V58',\n",
+       " 'V59',\n",
+       " 'V60',\n",
+       " 'V61',\n",
+       " 'V62',\n",
+       " 'V63',\n",
+       " 'V64',\n",
+       " 'V65',\n",
+       " 'V66',\n",
+       " 'V67',\n",
+       " 'V68',\n",
+       " 'V69',\n",
+       " 'V70',\n",
+       " 'V71',\n",
+       " 'V72',\n",
+       " 'V73',\n",
+       " 'V74',\n",
+       " 'V75',\n",
+       " 'V76',\n",
+       " 'V77',\n",
+       " 'V78',\n",
+       " 'V79',\n",
+       " 'V80',\n",
+       " 'V81',\n",
+       " 'V82',\n",
+       " 'V83',\n",
+       " 'V84',\n",
+       " 'V85',\n",
+       " 'V86',\n",
+       " 'V87',\n",
+       " 'V88',\n",
+       " 'V89',\n",
+       " 'V90',\n",
+       " 'V91',\n",
+       " 'V92',\n",
+       " 'V93',\n",
+       " 'V94',\n",
+       " 'V95',\n",
+       " 'V96',\n",
+       " 'V97',\n",
+       " 'V98',\n",
+       " 'V99',\n",
+       " 'V100',\n",
+       " 'V101',\n",
+       " 'V102',\n",
+       " 'V103',\n",
+       " 'V104',\n",
+       " 'V105',\n",
+       " 'V106',\n",
+       " 'V107',\n",
+       " 'V108',\n",
+       " 'V109',\n",
+       " 'V110',\n",
+       " 'V111',\n",
+       " 'V112',\n",
+       " 'V113',\n",
+       " 'V114',\n",
+       " 'V115',\n",
+       " 'V116',\n",
+       " 'V117',\n",
+       " 'V118',\n",
+       " 'V119',\n",
+       " 'V120',\n",
+       " 'V121',\n",
+       " 'V122',\n",
+       " 'V123',\n",
+       " 'V124',\n",
+       " 'V125',\n",
+       " 'V126',\n",
+       " 'V127',\n",
+       " 'V128',\n",
+       " 'V129',\n",
+       " 'V130',\n",
+       " 'V131',\n",
+       " 'V132',\n",
+       " 'V133',\n",
+       " 'V134',\n",
+       " 'V135',\n",
+       " 'V136',\n",
+       " 'V137',\n",
+       " 'V279',\n",
+       " 'V280',\n",
+       " 'V281',\n",
+       " 'V282',\n",
+       " 'V283',\n",
+       " 'V284',\n",
+       " 'V285',\n",
+       " 'V286',\n",
+       " 'V287',\n",
+       " 'V288',\n",
+       " 'V289',\n",
+       " 'V290',\n",
+       " 'V291',\n",
+       " 'V292',\n",
+       " 'V293',\n",
+       " 'V294',\n",
+       " 'V295',\n",
+       " 'V296',\n",
+       " 'V297',\n",
+       " 'V298',\n",
+       " 'V299',\n",
+       " 'V300',\n",
+       " 'V301',\n",
+       " 'V302',\n",
+       " 'V303',\n",
+       " 'V304',\n",
+       " 'V305',\n",
+       " 'V306',\n",
+       " 'V307',\n",
+       " 'V308',\n",
+       " 'V309',\n",
+       " 'V310',\n",
+       " 'V311',\n",
+       " 'V312',\n",
+       " 'V313',\n",
+       " 'V314',\n",
+       " 'V315',\n",
+       " 'V316',\n",
+       " 'V317',\n",
+       " 'V318',\n",
+       " 'V319',\n",
+       " 'V320',\n",
+       " 'V321',\n",
+       " 'card4_american express',\n",
+       " 'card4_discover',\n",
+       " 'card4_mastercard',\n",
+       " 'card4_missing',\n",
+       " 'card4_visa',\n",
+       " 'card6_charge card',\n",
+       " 'card6_credit',\n",
+       " 'card6_debit',\n",
+       " 'card6_debit or credit',\n",
+       " 'card6_missing',\n",
+       " 'M4_M0',\n",
+       " 'M4_M1',\n",
+       " 'M4_M2',\n",
+       " 'M4_missing',\n",
+       " 'ProductCD_C',\n",
+       " 'ProductCD_H',\n",
+       " 'ProductCD_R',\n",
+       " 'ProductCD_S',\n",
+       " 'ProductCD_W',\n",
+       " 'P_emaildomain_anonymous',\n",
+       " 'P_emaildomain_aol',\n",
+       " 'P_emaildomain_apple',\n",
+       " 'P_emaildomain_gmx',\n",
+       " 'P_emaildomain_google',\n",
+       " 'P_emaildomain_isp',\n",
+       " 'P_emaildomain_microsoft',\n",
+       " 'P_emaildomain_missing',\n",
+       " 'P_emaildomain_other',\n",
+       " 'P_emaildomain_secure',\n",
+       " 'P_emaildomain_yahoo',\n",
+       " 'R_emaildomain_anonymous',\n",
+       " 'R_emaildomain_aol',\n",
+       " 'R_emaildomain_apple',\n",
+       " 'R_emaildomain_edu',\n",
+       " 'R_emaildomain_gmx',\n",
+       " 'R_emaildomain_google',\n",
+       " 'R_emaildomain_isp',\n",
+       " 'R_emaildomain_microsoft',\n",
+       " 'R_emaildomain_missing',\n",
+       " 'R_emaildomain_other',\n",
+       " 'R_emaildomain_secure',\n",
+       " 'R_emaildomain_yahoo']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data.columns.tolist()"
+   ]
   }
  ],
  "metadata": {
