--- a/Preprocesamiento.ipynb
+++ b/Preprocesamiento.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,12 +291,14 @@
       "       ...\n",
       "       'V330', 'V331', 'V332', 'V333', 'V334', 'V335', 'V336', 'V337', 'V338',\n",
       "       'V339'],\n",
-      "      dtype='object', length=388)\n",
-      "Total de columnas numéricas: 388\n",
+      "      dtype='object', length=380)\n",
+      "Total de columnas numéricas: 380\n",
       "\n",
       "Columnas categóricas:\n",
-      "Index([], dtype='object')\n",
-      "Total de columnas categóricas: 0\n"
+      "Index(['ProductCD', 'card4', 'card6', 'P_emaildomain', 'R_emaildomain', 'M1',\n",
+      "       'M2', 'M3', 'M4', 'M5', 'M6', 'M7', 'M8', 'M9'],\n",
+      "      dtype='object')\n",
+      "Total de columnas categóricas: 14\n"
      ]
     }
    ],
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +871,7 @@
        " 'R_emaildomain_yahoo']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
